--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/micheldavrdz/PrismaDB#readme",
   "dependencies": {
     "@prisma/client": "^3.14.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1"
   },
   "devDependencies": {
